--- a/event.html
+++ b/event.html
@@ -10,6 +10,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./javascript/index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .body{
+             background-image: url('../images/pexels-rachel-claire-6123093.jpg');
+        }
+    </style>
 </head>
 <body>
 
