--- a/event.html
+++ b/event.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         .body{
-             background-image: url('../images/pexels-rachel-claire-6123093.jpg');
+             background-image: url(../images/pexels-rachel-claire-6123093.jpg);
         }
     </style>
 </head>
